--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fremdsprachen-Plattform - Registrierung</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="modul" src="register.js" defer></script>
 </head>
 <body class="light-mode">
     <div class="container">
